# CaptureTranslater

./: .gitignore  README.md  autotranslater.settings.example.json  capture_translater.settings.example.json  main.py  pyproject.toml  requirements.txt
src/autotranslater/: __init__.py  app.py  boxes.py  capture.py  constants.py  font_manager.py  geometry.py  logging_config.py  main_window.py  models.py  ocr.py  overlay.py  pipeline.py  platform.py  preview.py  settings_store.py  text_painter.py
src/capture_translater/: __init__.py  app.py  boxes.py  capture.py  constants.py  font_manager.py  geometry.py  logging_config.py  main_window.py  models.py  ocr.py  ocr_presets.py  overlay.py  pipeline.py  platform.py  preview.py  scan_worker.py  settings_store.py  text_painter.py  translation.py
