[project]
name = "CaptureTranslater"
version = "0.1.0"
description = "A manga/manhwa translation overlay prototype."
requires-python = ">=3.10"
dependencies = [
    "mss>=10.0",
    "PySide6>=6.7",
]

[project.optional-dependencies]
ocr = [
    "pillow>=10.0",
    "pytesseract>=0.3",
]

[project.scripts]
capture-translater = "capture_translater.app:main"

[tool.ruff]
line-length = 100
